--- a/seckilling03/pom.xml
+++ b/seckilling03/pom.xml
@@ -81,6 +81,12 @@
           <version>3.7</version>
       </dependency>
 
+      <!--JSR-303检验-->
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-validation</artifactId>
+      </dependency>
+
   </dependencies>
 
   <build>
